--- a/Skipping/classificationOfSkipping.ipynb
+++ b/Skipping/classificationOfSkipping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "[7174934 rows x 3 columns]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -224,15 +224,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lower bound: 4466611\n",
-      "Upper bound: 4516611\n"
+      "Lower bound: 6843235\n",
+      "Upper bound: 6893235\n"
      ]
     }
    ],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
        "[50026 rows x 366 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,31 +776,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        [372, 371.0, 392.0, 391.0, 391.0, 391.0, 0.0, ...\n",
-       "1        [369, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...\n",
-       "2        [391, 372.0, 401.0, 391.0, 391.0, 391.0, 391.0...\n",
-       "3        [372, 372.0, 372.0, 372.0, 372.0, 372.0, 0.0, ...\n",
-       "4        [391, 391.0, 391.0, 391.0, 0.0, 0.0, 0.0, 0.0,...\n",
-       "                               ...                        \n",
-       "50021    [402, 402.0, 402.0, 402.0, 402.0, 402.0, 165.0...\n",
-       "50022    [367, 365.0, 398.0, 365.0, 365.0, 398.0, 398.0...\n",
-       "50023    [353, 41.0, 41.0, 367.0, 41.0, 41.0, 41.0, 41....\n",
-       "50024    [367, 391.0, 392.0, 392.0, 372.0, 372.0, 372.0...\n",
-       "50025    [367, 393.0, 393.0, 393.0, 393.0, 393.0, 393.0...\n",
-       "Name: seq, Length: 50026, dtype: object"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# make a list of the values in column 0 to n of base_data and put in column seq\n",
     "base_data['seq'] = base_data.values.tolist()\n",
@@ -817,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,26 +827,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import the generated sessions:\n",
-    "base_path = \"gen_sessions/\"\n",
+    "base_path = \"gen_sessions/1000/\"\n",
     "gen_sessions_paths = [\n",
-    "  # base_path + '5_1000.csv',\n",
-    "  # base_path + '10_1000.csv',\n",
-    "  # base_path + '25_1000.csv',\n",
-    "  # base_path + '50_1000.csv',\n",
-    "  # base_path + '75_1000.csv',\n",
-    "  # base_path + '100_1000.csv',\n",
-    "  base_path + 'an.csv',\n",
+    "  base_path + '5_1000.csv',\n",
+    "  base_path + '10_1000.csv',\n",
+    "  base_path + '25_1000.csv',\n",
+    "  base_path + '50_1000.csv',\n",
+    "  base_path + '75_1000.csv',\n",
+    "  base_path + '100_1000.csv',\n",
+    "  # base_path + 'an.csv',\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,83 +860,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gen_sessions/an.csv\n",
-      "10\n",
-      "0.9985008994603238\n",
-      "0.4995000499950005\n",
-      "\n",
-      "gen_sessions/an.csv\n",
-      "20\n",
-      "0.9976014391365181\n",
-      "0.599000099990001\n",
-      "\n",
-      "gen_sessions/an.csv\n",
-      "50\n",
-      "0.9977013791724965\n",
-      "0.599050094990501\n",
-      "\n",
-      "gen_sessions/an.csv\n",
-      "65\n",
-      "0.997101738956626\n",
-      "0.4988001199880012\n",
-      "\n",
-      "gen_sessions/an.csv\n",
-      "100\n",
-      "0.9972016789926045\n",
-      "0.4988501149885011\n",
-      "\n",
-      "gen_sessions/an.csv\n",
-      "200\n",
-      "0.994203477913252\n",
-      "0.5973002699730027\n",
-      "\n",
-      "gen_sessions/an.csv\n",
-      "300\n",
-      "0.9938037177693384\n",
-      "0.597100289971003\n",
-      "\n",
-      "gen_sessions/an.csv\n",
-      "400\n",
-      "0.9916050369778133\n",
-      "0.596000399960004\n",
-      "\n",
-      "gen_sessions/an.csv\n",
-      "500\n",
-      "0.9917049770137917\n",
-      "0.5960503949605039\n",
-      "\n",
-      "gen_sessions/an.csv\n",
-      "600\n",
-      "0.9906056366180291\n",
-      "0.6954504549545046\n",
-      "\n",
-      "gen_sessions/an.csv\n",
-      "700\n",
-      "0.9909054567259644\n",
-      "0.5956504349565044\n",
-      "\n",
-      "gen_sessions/an.csv\n",
-      "800\n",
-      "0.9915050969418349\n",
-      "0.595950404959504\n",
-      "\n",
-      "gen_sessions/an.csv\n",
-      "900\n",
-      "0.9912052768338997\n",
-      "0.6957504249575043\n",
-      "\n",
-      "gen_sessions/an.csv\n",
-      "1000\n",
-      "0.991305216869878\n",
-      "0.5958504149585041\n",
-      "\n"
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;31mTypeError\u001b[0m: float() argument must be a string or a real number, not 'list'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [19], line 32\u001b[0m\n\u001b[0;32m     29\u001b[0m X_train_extra \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([X_train, df_gen\u001b[39m.\u001b[39mdrop(columns\u001b[39m=\u001b[39m[\u001b[39m\"\u001b[39m\u001b[39manomaly\u001b[39m\u001b[39m\"\u001b[39m])])\u001b[39m.\u001b[39mfillna(\u001b[39m0\u001b[39m)\n\u001b[0;32m     30\u001b[0m y_train_extra \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([y_train, df_gen[\u001b[39m\"\u001b[39m\u001b[39manomaly\u001b[39m\u001b[39m\"\u001b[39m]])\n\u001b[1;32m---> 32\u001b[0m clf \u001b[39m=\u001b[39m tree\u001b[39m.\u001b[39;49mDecisionTreeClassifier()\u001b[39m.\u001b[39;49mfit(X_train_extra, y_train_extra)\n\u001b[0;32m     33\u001b[0m \u001b[39m# clf_extra = LogisticRegression(random_state=0, max_iter=1000).fit(X_train_extra, y_train_extra_transformed)\u001b[39;00m\n\u001b[0;32m     34\u001b[0m \u001b[39m#y_train_predict = clf_extra.predict(X_train_extra)\u001b[39;00m\n\u001b[0;32m     35\u001b[0m predictions \u001b[39m=\u001b[39m clf\u001b[39m.\u001b[39mpredict(X_test)\n",
+      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\sklearn\\tree\\_classes.py:969\u001b[0m, in \u001b[0;36mDecisionTreeClassifier.fit\u001b[1;34m(self, X, y, sample_weight, check_input)\u001b[0m\n\u001b[0;32m    939\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfit\u001b[39m(\u001b[39mself\u001b[39m, X, y, sample_weight\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, check_input\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[0;32m    940\u001b[0m     \u001b[39m\"\"\"Build a decision tree classifier from the training set (X, y).\u001b[39;00m\n\u001b[0;32m    941\u001b[0m \n\u001b[0;32m    942\u001b[0m \u001b[39m    Parameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    966\u001b[0m \u001b[39m        Fitted estimator.\u001b[39;00m\n\u001b[0;32m    967\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 969\u001b[0m     \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mfit(\n\u001b[0;32m    970\u001b[0m         X,\n\u001b[0;32m    971\u001b[0m         y,\n\u001b[0;32m    972\u001b[0m         sample_weight\u001b[39m=\u001b[39;49msample_weight,\n\u001b[0;32m    973\u001b[0m         check_input\u001b[39m=\u001b[39;49mcheck_input,\n\u001b[0;32m    974\u001b[0m     )\n\u001b[0;32m    975\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\n",
+      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\sklearn\\tree\\_classes.py:172\u001b[0m, in \u001b[0;36mBaseDecisionTree.fit\u001b[1;34m(self, X, y, sample_weight, check_input)\u001b[0m\n\u001b[0;32m    170\u001b[0m check_X_params \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m(dtype\u001b[39m=\u001b[39mDTYPE, accept_sparse\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcsc\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    171\u001b[0m check_y_params \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m(ensure_2d\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, dtype\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m)\n\u001b[1;32m--> 172\u001b[0m X, y \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_data(\n\u001b[0;32m    173\u001b[0m     X, y, validate_separately\u001b[39m=\u001b[39;49m(check_X_params, check_y_params)\n\u001b[0;32m    174\u001b[0m )\n\u001b[0;32m    175\u001b[0m \u001b[39mif\u001b[39;00m issparse(X):\n\u001b[0;32m    176\u001b[0m     X\u001b[39m.\u001b[39msort_indices()\n",
+      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\sklearn\\base.py:591\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[1;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[0;32m    589\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mestimator\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m check_X_params:\n\u001b[0;32m    590\u001b[0m     check_X_params \u001b[39m=\u001b[39m {\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mdefault_check_params, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mcheck_X_params}\n\u001b[1;32m--> 591\u001b[0m X \u001b[39m=\u001b[39m check_array(X, input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mX\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mcheck_X_params)\n\u001b[0;32m    592\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mestimator\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m check_y_params:\n\u001b[0;32m    593\u001b[0m     check_y_params \u001b[39m=\u001b[39m {\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mdefault_check_params, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mcheck_y_params}\n",
+      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\sklearn\\utils\\validation.py:856\u001b[0m, in \u001b[0;36mcheck_array\u001b[1;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator, input_name)\u001b[0m\n\u001b[0;32m    854\u001b[0m         array \u001b[39m=\u001b[39m array\u001b[39m.\u001b[39mastype(dtype, casting\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39munsafe\u001b[39m\u001b[39m\"\u001b[39m, copy\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m    855\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 856\u001b[0m         array \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49masarray(array, order\u001b[39m=\u001b[39;49morder, dtype\u001b[39m=\u001b[39;49mdtype)\n\u001b[0;32m    857\u001b[0m \u001b[39mexcept\u001b[39;00m ComplexWarning \u001b[39mas\u001b[39;00m complex_warning:\n\u001b[0;32m    858\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    859\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mComplex data not supported\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m{}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(array)\n\u001b[0;32m    860\u001b[0m     ) \u001b[39mfrom\u001b[39;00m \u001b[39mcomplex_warning\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\pandas\\core\\generic.py:2064\u001b[0m, in \u001b[0;36mNDFrame.__array__\u001b[1;34m(self, dtype)\u001b[0m\n\u001b[0;32m   2063\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__array__\u001b[39m(\u001b[39mself\u001b[39m, dtype: npt\u001b[39m.\u001b[39mDTypeLike \u001b[39m|\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m np\u001b[39m.\u001b[39mndarray:\n\u001b[1;32m-> 2064\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39;49masarray(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_values, dtype\u001b[39m=\u001b[39;49mdtype)\n",
+      "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence."
      ]
     }
    ],
