--- a/Replaced/genReplacingPattern.ipynb
+++ b/Replaced/genReplacingPattern.ipynb
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
        "[91 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,6 +966,28 @@
     "patterns.head()\n",
     "patterns_df = patterns.copy()\n",
     "patterns_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen_patters(_patterns:pd.DataFrame) -> list:\n",
+    "  patterns = _patterns.copy()\n",
+    "  res = []\n",
+    "  # loop over the rows in the dataframe\n",
+    "  for row in patterns.iterrows():\n",
+    "      # get the values of the row\n",
+    "      res.append([row[1][0], row[1][1], row[1][2]])\n",
+    "        \n",
+    "        \n",
+    "  return res\n",
+    "\n",
+    "test = gen_patters(patterns_df)\n",
+    "test\n",
+    "markov_result_to_df(test, 'only_patterns','gen_sessions/only_patterns.csv')"
    ]
   },
   {
@@ -1054,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
