--- a/Skipping/generating_skipping.ipynb
+++ b/Skipping/generating_skipping.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\krdeg\\AppData\\Local\\Temp\\ipykernel_23208\\568469614.py:6: DtypeWarning: Columns (11,13,14,15,16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\krdeg\\AppData\\Local\\Temp\\ipykernel_692\\568469614.py:6: DtypeWarning: Columns (11,13,14,15,16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  base_df = pd.read_csv(\"../BPI2016_Clicks_Logged_In.csv\", encoding_errors=\"ignore\", on_bad_lines='skip', sep=\";\",\n"
      ]
     }
@@ -1003,16 +1003,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# deviation_rate = 100"
+    "def gen_patters(_patterns:pd.DataFrame) -> list:\n",
+    "  patterns = _patterns.copy()\n",
+    "  res = []\n",
+    "  # loop over the rows in the dataframe\n",
+    "  for row in patterns.iterrows():\n",
+    "      # get the values of the row\n",
+    "      len_c = len(row[1][2])\n",
+    "      for i in range(len_c):\n",
+    "        res.append([row[1][0], row[1][2][i]])\n",
+    "        \n",
+    "  return res\n",
+    "\n",
+    "test = gen_patters(patterns_to_generate)\n",
+    "test\n",
+    "markov_result_to_df(test, 'only_patterns','gen_sessions/only_patterns.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1035,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,648 +1142,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start with rate: 5\n",
-      "Generate the prob matrix for rate: 5\n",
-      "Generate sessions rate: 5\n",
-      "50\n",
-      "100\n",
-      "150\n",
-      "200\n",
-      "250\n",
-      "300\n",
-      "350\n",
-      "400\n",
-      "450\n",
-      "500\n",
-      "550\n",
-      "600\n",
-      "650\n",
-      "700\n",
-      "750\n",
-      "800\n",
-      "850\n",
-      "900\n",
-      "950\n",
-      "1000\n",
-      "1050\n",
-      "1100\n",
-      "1150\n",
-      "1200\n",
-      "1250\n",
-      "1300\n",
-      "1350\n",
-      "1400\n",
-      "1450\n",
-      "1500\n",
-      "1550\n",
-      "1600\n",
-      "1650\n",
-      "1700\n",
-      "1750\n",
-      "1800\n",
-      "1850\n",
-      "1900\n",
-      "1950\n",
-      "2000\n",
-      "2050\n",
-      "2100\n",
-      "2150\n",
-      "2200\n",
-      "2250\n",
-      "2300\n",
-      "2350\n",
-      "2400\n",
-      "2450\n",
-      "2500\n",
-      "2550\n",
-      "2600\n",
-      "2650\n",
-      "2700\n",
-      "2750\n",
-      "2800\n",
-      "2850\n",
-      "2900\n",
-      "2950\n",
-      "3000\n",
-      "3050\n",
-      "3100\n",
-      "3150\n",
-      "3200\n",
-      "3250\n",
-      "3300\n",
-      "3350\n",
-      "3400\n",
-      "3450\n",
-      "3500\n",
-      "3550\n",
-      "3600\n",
-      "3650\n",
-      "3700\n",
-      "3750\n",
-      "3800\n",
-      "3850\n",
-      "3900\n",
-      "3950\n",
-      "4000\n",
-      "4050\n",
-      "4100\n",
-      "4150\n",
-      "4200\n",
-      "4250\n",
-      "4300\n",
-      "4350\n",
-      "4400\n",
-      "4450\n",
-      "4500\n",
-      "4550\n",
-      "4600\n",
-      "4650\n",
-      "4700\n",
-      "4750\n",
-      "4800\n",
-      "4850\n",
-      "4900\n",
-      "4950\n",
-      "5000\n",
-      "Sessions Generated\n",
-      "done with 5\n",
-      "start with rate: 10\n",
-      "Generate the prob matrix for rate: 10\n",
-      "Generate sessions rate: 10\n",
-      "50\n",
-      "100\n",
-      "150\n",
-      "200\n",
-      "250\n",
-      "300\n",
-      "350\n",
-      "400\n",
-      "450\n",
-      "500\n",
-      "550\n",
-      "600\n",
-      "650\n",
-      "700\n",
-      "750\n",
-      "800\n",
-      "850\n",
-      "900\n",
-      "950\n",
-      "1000\n",
-      "1050\n",
-      "1100\n",
-      "1150\n",
-      "1200\n",
-      "1250\n",
-      "1300\n",
-      "1350\n",
-      "1400\n",
-      "1450\n",
-      "1500\n",
-      "1550\n",
-      "1600\n",
-      "1650\n",
-      "1700\n",
-      "1750\n",
-      "1800\n",
-      "1850\n",
-      "1900\n",
-      "1950\n",
-      "2000\n",
-      "2050\n",
-      "2100\n",
-      "2150\n",
-      "2200\n",
-      "2250\n",
-      "2300\n",
-      "2350\n",
-      "2400\n",
-      "2450\n",
-      "2500\n",
-      "2550\n",
-      "2600\n",
-      "2650\n",
-      "2700\n",
-      "2750\n",
-      "2800\n",
-      "2850\n",
-      "2900\n",
-      "2950\n",
-      "3000\n",
-      "3050\n",
-      "3100\n",
-      "3150\n",
-      "3200\n",
-      "3250\n",
-      "3300\n",
-      "3350\n",
-      "3400\n",
-      "3450\n",
-      "3500\n",
-      "3550\n",
-      "3600\n",
-      "3650\n",
-      "3700\n",
-      "3750\n",
-      "3800\n",
-      "3850\n",
-      "3900\n",
-      "3950\n",
-      "4000\n",
-      "4050\n",
-      "4100\n",
-      "4150\n",
-      "4200\n",
-      "4250\n",
-      "4300\n",
-      "4350\n",
-      "4400\n",
-      "4450\n",
-      "4500\n",
-      "4550\n",
-      "4600\n",
-      "4650\n",
-      "4700\n",
-      "4750\n",
-      "4800\n",
-      "4850\n",
-      "4900\n",
-      "4950\n",
-      "5000\n",
-      "Sessions Generated\n",
-      "done with 10\n",
-      "start with rate: 25\n",
-      "Generate the prob matrix for rate: 25\n",
-      "Generate sessions rate: 25\n",
-      "50\n",
-      "100\n",
-      "150\n",
-      "200\n",
-      "250\n",
-      "300\n",
-      "350\n",
-      "400\n",
-      "450\n",
-      "500\n",
-      "550\n",
-      "600\n",
-      "650\n",
-      "700\n",
-      "750\n",
-      "800\n",
-      "850\n",
-      "900\n",
-      "950\n",
-      "1000\n",
-      "1050\n",
-      "1100\n",
-      "1150\n",
-      "1200\n",
-      "1250\n",
-      "1300\n",
-      "1350\n",
-      "1400\n",
-      "1450\n",
-      "1500\n",
-      "1550\n",
-      "1600\n",
-      "1650\n",
-      "1700\n",
-      "1750\n",
-      "1800\n",
-      "1850\n",
-      "1900\n",
-      "1950\n",
-      "2000\n",
-      "2050\n",
-      "2100\n",
-      "2150\n",
-      "2200\n",
-      "2250\n",
-      "2300\n",
-      "2350\n",
-      "2400\n",
-      "2450\n",
-      "2500\n",
-      "2550\n",
-      "2600\n",
-      "2650\n",
-      "2700\n",
-      "2750\n",
-      "2800\n",
-      "2850\n",
-      "2900\n",
-      "2950\n",
-      "3000\n",
-      "3050\n",
-      "3100\n",
-      "3150\n",
-      "3200\n",
-      "3250\n",
-      "3300\n",
-      "3350\n",
-      "3400\n",
-      "3450\n",
-      "3500\n",
-      "3550\n",
-      "3600\n",
-      "3650\n",
-      "3700\n",
-      "3750\n",
-      "3800\n",
-      "3850\n",
-      "3900\n",
-      "3950\n",
-      "4000\n",
-      "4050\n",
-      "4100\n",
-      "4150\n",
-      "4200\n",
-      "4250\n",
-      "4300\n",
-      "4350\n",
-      "4400\n",
-      "4450\n",
-      "4500\n",
-      "4550\n",
-      "4600\n",
-      "4650\n",
-      "4700\n",
-      "4750\n",
-      "4800\n",
-      "4850\n",
-      "4900\n",
-      "4950\n",
-      "5000\n",
-      "Sessions Generated\n",
-      "done with 25\n",
-      "start with rate: 50\n",
-      "Generate the prob matrix for rate: 50\n",
-      "Generate sessions rate: 50\n",
-      "50\n",
-      "100\n",
-      "150\n",
-      "200\n",
-      "250\n",
-      "300\n",
-      "350\n",
-      "400\n",
-      "450\n",
-      "500\n",
-      "550\n",
-      "600\n",
-      "650\n",
-      "700\n",
-      "750\n",
-      "800\n",
-      "850\n",
-      "900\n",
-      "950\n",
-      "1000\n",
-      "1050\n",
-      "1100\n",
-      "1150\n",
-      "1200\n",
-      "1250\n",
-      "1300\n",
-      "1350\n",
-      "1400\n",
-      "1450\n",
-      "1500\n",
-      "1550\n",
-      "1600\n",
-      "1650\n",
-      "1700\n",
-      "1750\n",
-      "1800\n",
-      "1850\n",
-      "1900\n",
-      "1950\n",
-      "2000\n",
-      "2050\n",
-      "2100\n",
-      "2150\n",
-      "2200\n",
-      "2250\n",
-      "2300\n",
-      "2350\n",
-      "2400\n",
-      "2450\n",
-      "2500\n",
-      "2550\n",
-      "2600\n",
-      "2650\n",
-      "2700\n",
-      "2750\n",
-      "2800\n",
-      "2850\n",
-      "2900\n",
-      "2950\n",
-      "3000\n",
-      "3050\n",
-      "3100\n",
-      "3150\n",
-      "3200\n",
-      "3250\n",
-      "3300\n",
-      "3350\n",
-      "3400\n",
-      "3450\n",
-      "3500\n",
-      "3550\n",
-      "3600\n",
-      "3650\n",
-      "3700\n",
-      "3750\n",
-      "3800\n",
-      "3850\n",
-      "3900\n",
-      "3950\n",
-      "4000\n",
-      "4050\n",
-      "4100\n",
-      "4150\n",
-      "4200\n",
-      "4250\n",
-      "4300\n",
-      "4350\n",
-      "4400\n",
-      "4450\n",
-      "4500\n",
-      "4550\n",
-      "4600\n",
-      "4650\n",
-      "4700\n",
-      "4750\n",
-      "4800\n",
-      "4850\n",
-      "4900\n",
-      "4950\n",
-      "5000\n",
-      "Sessions Generated\n",
-      "done with 50\n",
-      "start with rate: 75\n",
-      "Generate the prob matrix for rate: 75\n",
-      "Generate sessions rate: 75\n",
-      "50\n",
-      "100\n",
-      "150\n",
-      "200\n",
-      "250\n",
-      "300\n",
-      "350\n",
-      "400\n",
-      "450\n",
-      "500\n",
-      "550\n",
-      "600\n",
-      "650\n",
-      "700\n",
-      "750\n",
-      "800\n",
-      "850\n",
-      "900\n",
-      "950\n",
-      "1000\n",
-      "1050\n",
-      "1100\n",
-      "1150\n",
-      "1200\n",
-      "1250\n",
-      "1300\n",
-      "1350\n",
-      "1400\n",
-      "1450\n",
-      "1500\n",
-      "1550\n",
-      "1600\n",
-      "1650\n",
-      "1700\n",
-      "1750\n",
-      "1800\n",
-      "1850\n",
-      "1900\n",
-      "1950\n",
-      "2000\n",
-      "2050\n",
-      "2100\n",
-      "2150\n",
-      "2200\n",
-      "2250\n",
-      "2300\n",
-      "2350\n",
-      "2400\n",
-      "2450\n",
-      "2500\n",
-      "2550\n",
-      "2600\n",
-      "2650\n",
-      "2700\n",
-      "2750\n",
-      "2800\n",
-      "2850\n",
-      "2900\n",
-      "2950\n",
-      "3000\n",
-      "3050\n",
-      "3100\n",
-      "3150\n",
-      "3200\n",
-      "3250\n",
-      "3300\n",
-      "3350\n",
-      "3400\n",
-      "3450\n",
-      "3500\n",
-      "3550\n",
-      "3600\n",
-      "3650\n",
-      "3700\n",
-      "3750\n",
-      "3800\n",
-      "3850\n",
-      "3900\n",
-      "3950\n",
-      "4000\n",
-      "4050\n",
-      "4100\n",
-      "4150\n",
-      "4200\n",
-      "4250\n",
-      "4300\n",
-      "4350\n",
-      "4400\n",
-      "4450\n",
-      "4500\n",
-      "4550\n",
-      "4600\n",
-      "4650\n",
-      "4700\n",
-      "4750\n",
-      "4800\n",
-      "4850\n",
-      "4900\n",
-      "4950\n",
-      "5000\n",
-      "Sessions Generated\n",
-      "done with 75\n",
-      "start with rate: 100\n",
-      "Generate the prob matrix for rate: 100\n",
-      "Generate sessions rate: 100\n",
-      "50\n",
-      "100\n",
-      "150\n",
-      "200\n",
-      "250\n",
-      "300\n",
-      "350\n",
-      "400\n",
-      "450\n",
-      "500\n",
-      "550\n",
-      "600\n",
-      "650\n",
-      "700\n",
-      "750\n",
-      "800\n",
-      "850\n",
-      "900\n",
-      "950\n",
-      "1000\n",
-      "1050\n",
-      "1100\n",
-      "1150\n",
-      "1200\n",
-      "1250\n",
-      "1300\n",
-      "1350\n",
-      "1400\n",
-      "1450\n",
-      "1500\n",
-      "1550\n",
-      "1600\n",
-      "1650\n",
-      "1700\n",
-      "1750\n",
-      "1800\n",
-      "1850\n",
-      "1900\n",
-      "1950\n",
-      "2000\n",
-      "2050\n",
-      "2100\n",
-      "2150\n",
-      "2200\n",
-      "2250\n",
-      "2300\n",
-      "2350\n",
-      "2400\n",
-      "2450\n",
-      "2500\n",
-      "2550\n",
-      "2600\n",
-      "2650\n",
-      "2700\n",
-      "2750\n",
-      "2800\n",
-      "2850\n",
-      "2900\n",
-      "2950\n",
-      "3000\n",
-      "3050\n",
-      "3100\n",
-      "3150\n",
-      "3200\n",
-      "3250\n",
-      "3300\n",
-      "3350\n",
-      "3400\n",
-      "3450\n",
-      "3500\n",
-      "3550\n",
-      "3600\n",
-      "3650\n",
-      "3700\n",
-      "3750\n",
-      "3800\n",
-      "3850\n",
-      "3900\n",
-      "3950\n",
-      "4000\n",
-      "4050\n",
-      "4100\n",
-      "4150\n",
-      "4200\n",
-      "4250\n",
-      "4300\n",
-      "4350\n",
-      "4400\n",
-      "4450\n",
-      "4500\n",
-      "4550\n",
-      "4600\n",
-      "4650\n",
-      "4700\n",
-      "4750\n",
-      "4800\n",
-      "4850\n",
-      "4900\n",
-      "4950\n",
-      "5000\n",
-      "Sessions Generated\n",
-      "done with 100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "gen_all_sessions(deviation_rates,5000)"
+    "# gen_all_sessions(deviation_rates,5000)"
    ]
   }
  ],
