--- a/Replaced/Label_Replace.ipynb
+++ b/Replaced/Label_Replace.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "5573282  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
        "[91 rows x 4 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -554,14 +554,14 @@
     }
    ],
    "source": [
-    "sess = label_sessions(base_df, patterns)\n",
+    "anomaly_session_id = label_sessions(base_df, patterns)\n",
     "\n",
-    "print(sess)"
+    "print(anomaly_session_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -570,30 +570,30 @@
        "91"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(sess)"
+    "len(anomaly_session_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create a new column in the base_df to indicate if the session is anomalous\n",
     "# if a session is anomalous it will have a True in the column else False\n",
     "labeled_df = base_df.copy()\n",
-    "labeled_df[\"anomaly\"] = base_df[\"SessionID\"].apply(lambda x: x in sess)"
+    "labeled_df[\"anomaly\"] = base_df[\"SessionID\"].apply(lambda x: x in anomaly_session_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
        "[7174934 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
        "91"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
        "660179"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
        "660270"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
        "660270"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
